logs are now stored in a bind volume instead of service volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,5 @@ services:
       - /etc/localtime:/etc/localtime:ro
       # DATA
       - dynu-updater-data:/data
+      # LOGS
+      - ./logs:/var/log/dynu-updater
