change method of sending email notification

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,12 @@ dynu_username=
 dynu_password=
 dynu_location=
 
-mail_to=
-mail_from=
-mail_user=username:password
+MAIL_TO_NAME=
+MAIL_TO_EMAIL=
+MAIL_FROM_NAME=
+MAIL_FROM_EMAIL=
+MAIL_FROM_PASS=
+MAIL_HOST=
+MAIL_PORT=
+
+HOST_HOSTNAME=
